--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-safe-area-context": "^4.10.8",
